# fido-rs

./: Cargo.toml  README.MD
fido2-rs/: Cargo.toml  README.MD
fido2-rs/src/: assertion.rs  cbor.rs  credentials.rs  device.rs  error.rs  key.rs  lib.rs  utils.rs
libfido2-sys/: Cargo.toml  LICENSE  README.MD  build.rs  fido2_wrapper.h  help.txt
libfido2-sys/src/: ffi.rs  lib.rs
