[package]
name = "fido2-rs"
version = "0.1.0"
authors = ["tyan boot <tyanboot@outlook.com>"]
license = "MIT"
description = "Rust bindings to Yubico fido2"
repository = "https://github.com/tyan-boot/fido-rs"
keywords = ["fido2", "webauthn"]
categories = ["authentication", "api-bindings", "hardware-support"]
edition = "2021"

[dependencies]
thiserror = "1.0.37"
bitflags = "1.3.2"
libfido2-sys = { version = "0.1.0", path = "../libfido2-sys" }
openssl = "0.10.45"
foreign-types = "0.3"

[dev-dependencies]
anyhow = "1.0.66"