[package]
name = "libfido2-sys"
version = "0.2.0"
authors = ["tyan boot <tyanboot@outlook.com>"]
license = "MIT"
description = "FFI bindings to Yubico fido2"
repository = "https://github.com/tyan-boot/fido-rs"
keywords = ["fido2", "webauthn"]
categories = ["external-ffi-bindings"]
edition = "2021"
links = "fido2"

build = "build.rs"

[dependencies]

[build-dependencies]
anyhow = "1.0.66"
ureq = { version = "2.5.0", default-features = false, features = ["tls"] }
sha2 = "0.10.6"
hex = "0.4.3"
cfg-if = "1.0.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
zip = { version = "0.6.3" }
vcpkg = "0.2.15"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
cmake = "0.1.49"
flate2 = "1.0.25"
tar = "0.4.38"
pkg-config = "0.3.26"